# kittentts_wasm

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  index.html  justfile  rust-toolchain.toml  voices.json
.cargo/: config.toml
.github/workflows/: ci.yml
pkg/: kittentts_wasm.d.ts  kittentts_wasm.js  kittentts_wasm_bg.wasm.d.ts  package.json
src/: lib.rs  phonemizer.rs  session.rs  text_cleaner.rs  wav.rs
src/phonemizer/: mod.rs  phonemizer.rs
src/phonemizer/fixtures/: generate_fixtures.py  python_outputs.json
web/: app.mjs  env.js  index.html  style.css  wav.mjs
