[package]
name = "kittentts_wasm"
description = "KittenTTS wasm : CSR app using rust"
repository = "https://github.com/mtb0x1/kittentts_wasm"
license = "TBD"
version = "0.0.8-mini"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
js-sys = "0.3"
once_cell = "1"
#ort = { git = "https://github.com/pykeio/ort", default-features = false , features = ["alternative-backend"] }
ort = { version = "2.0.0-rc.12", default-features = false , features = ["alternative-backend"] }
#ort-web = { git = "https://github.com/pykeio/ort", default-features = false }
ort-web = { version = "0.2.1", default-features = false }
#ort-candle =  { version = "0.3.0", default-features = false }
#ort-tract = { version = "0.3.0", default-features = false }
#Needed by ort-tract and candle
#getrandom = { version = "0.3.4", features = ["wasm_js"] }
rayon = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "time",
    "ansi",
] }
tracing-web = "0.1"
time = { version = "0.3", features = ["wasm-bindgen"] }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "UrlSearchParams",
    "Location",
    "Document",
    "HtmlElement",
    "AudioContext",
    "console",
    "Blob",
    "BlobPropertyBag",
] }
ndarray = "0.15"
cmudict-fast = "0.8.0"




[build-dependencies]
hf-hub = "0.5"
zip = { version = "8", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
